--- a/src/output/css/output.css
+++ b/src/output/css/output.css
@@ -2034,6 +2034,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
